--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,84 +1,57 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Ken Dudley's Web Site</title>
-
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
+    <title>@ViewData["Title"] - dqcsweb</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">dqcsweb</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Dudley's Web</a>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Blog">Blog</a></li>
+                        <li><a href="https://www.youtube.com/user/dudley810" target="_blank">Videos</a></li>
+                        <li><a asp-area="" asp-controller="ContactUs" asp-action="Index">Contact</a></li>
+                    </ul>
+                    <div class="nav navbar-nav navbar-right">
+                        <b style="background-color:white">&nbsp&nbspFollow Me on&nbsp&nbsp</b></style>
+                        <a href="https://www.facebook.com/dudley810"><img src="~/images/facebook.png" width="32" height="32" /></a>
+                        <a href="https://www.twitter.com/dudley810"><img src="~/images/twitter.jpg" width="32" height="32" /></a>
+                        <a href="https://www.youtube.com/user/dudley810"><img src="~/images/youtube.jpg" width="32" height="32" /></a>
+                        <a href="https://www.instagram.com/dudley810"><img src="~/images/instagram.png" width="32" height="32" /> </a>
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Blog">Blog</a></li>
-                    <li><a href="https://www.youtube.com/user/dudley810" target="_blank">Videos</a></li>
-                    <li><a asp-area="" asp-controller="ContactUs" asp-action="Index">Contact</a></li>
-                </ul>
-                <p class="nav navbar-nav navbar-right">
-                    <b style="background-color:white">&nbsp&nbspFollow Me on&nbsp&nbsp</b></style>                   
-                    <a href="https://www.facebook.com/dudley810"><img src="~/images/facebook.png" width="32" height="32" /></a>
-                    <a href="https://www.twitter.com/dudley810"><img src="~/images/twitter.jpg" width="32" height="32" /></a>
-                    <a href="https://www.youtube.com/user/dudley810"><img src="~/images/youtube.jpg" width="32" height="32" /></a>
-                    <a href="https://www.instagram.com/dudley810"><img src="~/images/instagram.png" width="32" height="32" /> </a>
-                </p>
-            </div>
-        </div>
-    </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2017 - Dudley's Web - <b>Follow Me On&nbsp&nbsp</b>
+        </nav>
+    </header>
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2020 - Dudley's Web - <b>Follow Me On&nbsp&nbsp</b>
             <a href="https://www.facebook.com/dudley810"><img src="~/images/facebook.png" width="32" height="32" /></a>
             <a href="https://www.twitter.com/dudley810"><img src="~/images/twitter.jpg" width="32" height="32" /></a>
             <a href="https://www.youtube.com/user/dudley810"><img src="~/images/youtube.jpg" width="32" height="32" /></a>
             <a href="https://www.instagram.com/dudley810"><img src="~/images/instagram.png" width="32" height="32" /> </a>
-            </p>
-        </footer>
-    </div>
-
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
-
-    @RenderSection("Scripts", required: false)
+        </div>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
