--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - dqcsweb</title>
+    <title>@ViewData["Title"] - Ken Dudley's Web Site</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">dqcsweb</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Dudley's Web</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                         <li><a asp-area="" asp-controller="ContactUs" asp-action="Index">Contact</a></li>
                     </ul>
                     <div class="nav navbar-nav navbar-right">
-                        <b style="background-color:white">&nbsp&nbspFollow Me on&nbsp&nbsp</b></style>
+                        <b>Follow Me on&nbsp;&nbsp;</b>
                         <a href="https://www.facebook.com/dudley810"><img src="~/images/facebook.png" width="32" height="32" /></a>
                         <a href="https://www.twitter.com/dudley810"><img src="~/images/twitter.jpg" width="32" height="32" /></a>
                         <a href="https://www.youtube.com/user/dudley810"><img src="~/images/youtube.jpg" width="32" height="32" /></a>
