--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,30 @@
 ﻿@{
     ViewData["Title"] = "Ken Dudley's Home Page";
 }
+
+<div id="carouselExampleInterval" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active" data-interval="6000">
+            <img src="/images/banner1.svg" class="img-responsive">
+        </div>
+        <div class="carousel-item" data-interval="2000">
+            <img src="/images/banner2.svg" class="img-responsive">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/banner3.svg" class="img-responsive">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+<br />
+<br />
 <div class="row">
     <h2>Welcome to Ken's Website</h2>
 </div>
