updating front page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,5 +26,13 @@
 <br />
 <br />
 <div class="row">
-    <h2>Welcome to Ken's Website</h2>
+    <h2>Welcome to Ken's Site</h2><br /><br />
+    <div class="col-md-12">
+        <h2>Other Sites</h2>
+        <ul>
+            <li>Hylander Management - <a href="http://hylandermanagement.com">hylandermanagement.com</a></li>
+            <li>Knight's of Columbus #11689 - <a href="https://spotknights.com">spotknights.com</a></li>
+            <li>Metropolitan backflow - <a href="http://metropolitanbackflow.com">metropolitanbackflow.com</a></li>
+        </ul>
+    </div>
 </div>
