--- a/Views/Home/Blog.cshtml
+++ b/Views/Home/Blog.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Blog";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
-<br />
-@Html.Raw(@ViewBag.bloghtml)
+<div>
+    <h3>@ViewData["Message"]</h3>
+    <br />
+    @Html.Raw(@ViewBag.bloghtml)
+</div>
