--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,9 @@
 <div id="carouselInterval" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active" data-interval="2000">
+            <img src="/images/evan2021.svg" class="img-responsive">
+        </div>
+        <div class="carousel-item" data-interval="2000">
             <img src="/images/banner1.svg" class="img-responsive">
         </div>
         <div class="carousel-item" data-interval="2000">
